<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueueActivity"
    android:id="@+id/activity_queue"
    android:background="@color/colorWindowBackground" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include2"
            layout="@layout/navigation_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/include2">

            <LinearLayout
                android:id="@+id/linLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/include2">

                <TextView
                    android:id="@+id/lblWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:text="@string/welcome_to_helen_joseph_hospital"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/lblDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:hint="@string/department"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtQueueSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/queue_length"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/lblCalling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/your_calling_number_is"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/lblNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:elevation="1dp"
                    android:hint="@string/na"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="120sp"
                    android:textStyle="normal|bold"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:elevation="1dp"
                    android:text="@string/exit_queue"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ObsoleteLayoutParam">

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/linearLayout"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:hint="@string/date"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lblTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/time"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <view
        android:id="@+id/navigationDrawer"
        class="android.support.design.widget.NavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>