<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/colorWindowBackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="serif"
            android:text="@string/loginLabel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorNavyBlue"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimary"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_click_here"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

</ScrollView>