<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorWindowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:isScrollContainer="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="serif"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/txtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Surname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/txtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Date of birth"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cell_number"
            android:inputType="phone"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/txtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorNavyBlue"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:text="Register"
            android:textColor="@android:color/white"
            android:textColorLink="@color/colorNavyBlue"
            android:textSize="24sp"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="67dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account_click_here"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

</ScrollView>