<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_checkin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckinActivity"
    android:background="@color/colorWindowBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/navigation_bar_layout" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                tools:targetApi="lollipop"
                android:fitsSystemWindows="false"
                android:duplicateParentState="false"
                android:baselineAligned="false"
                android:gravity="center"
                tools:ignore="UselessParent">

                <TextView
                    android:text="@string/check_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblCheckIn"
                    android:textSize="36sp"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorNavyBlue"
                    android:fontFamily="serif"
                    android:layout_marginBottom="60dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtIllness"
                    android:hint="@string/illness"
                    android:textColor="@color/colorNavyBlue"
                    android:textSize="20sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                        <TextView
                            android:text="@string/disability"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lblDisability"
                            android:textSize="20sp"
                            android:textColor="@color/colorNavyBlue"
                            android:layout_weight="1" />

                        <RadioButton
                            android:text="@string/no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rdbNo"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/colorNavyBlue" />

                        <RadioButton
                            android:text="@string/yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rdbYes"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>

                </RadioGroup>

                <Button
                    android:text="Submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCheckin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="70dp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <view
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        class="android.support.design.widget.NavigationView"
        android:id="@+id/navigationDrawer"
        app:menu="@menu/menu_navigation"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>